force-app/main/default/objects/Defect__c/Defect__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - This object represents a failure to meet a requirement.</description>
    <label>Defect</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>