force-app/main/default/objects/Defect__c/fields/Approval_Information__c.field-meta.xml
<CustomField>
    <fullName>Approval_Information__c</fullName>
    <label>Approval Information</label>
    <type>TextArea</type>
</CustomField>