force-app/main/default/objects/Defect__c/fields/Associated_Defect__c.field-meta.xml
<CustomField>
    <fullName>Associated_Defect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Scenario</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>