force-app/main/default/objects/Defect__c/fields/Associated_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Associated_Test_Result__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the Test Result that the defect was identified on</description>
    <label>Associated Test Result</label>
    <referenceTo>Test_Result__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>