force-app/main/default/objects/Defect__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related capability to the defect</description>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>