force-app/main/default/objects/Defect__c/fields/Cause_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Defect__c</fullName>
    <description>Reflects the cause of the defect.</description>
    <label>Cause of Defect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Issue</fullName>
            </value>
            <value>
                <fullName>Change in Requirement</fullName>
            </value>
            <value>
                <fullName>Deployment Issue</fullName>
            </value>
            <value>
                <fullName>FLS Issue</fullName>
            </value>
            <value>
                <fullName>Incomplete Input</fullName>
            </value>
            <value>
                <fullName>Incomplete Unit Testing</fullName>
            </value>
            <value>
                <fullName>Inconsistency</fullName>
            </value>
            <value>
                <fullName>Incorrect/Invalid Input</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Lack of Clarity</fullName>
            </value>
            <value>
                <fullName>Logic</fullName>
            </value>
            <value>
                <fullName>Memory management</fullName>
            </value>
            <value>
                <fullName>Misunderstood Requirement</fullName>
            </value>
            <value>
                <fullName>Naming Convention</fullName>
            </value>
            <value>
                <fullName>Not Testable</fullName>
            </value>
            <value>
                <fullName>Not Verfiable</fullName>
            </value>
            <value>
                <fullName>Oversight</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Portability</fullName>
            </value>
            <value>
                <fullName>Profile Issue</fullName>
            </value>
            <value>
                <fullName>Redundant Code</fullName>
            </value>
            <value>
                <fullName>Requirements Missed</fullName>
            </value>
            <value>
                <fullName>Reusability</fullName>
            </value>
            <value>
                <fullName>Standards</fullName>
            </value>
            <value>
                <fullName>Storage structure</fullName>
            </value>
            <value>
                <fullName>Test Data</fullName>
            </value>
            <value>
                <fullName>Test Setup</fullName>
            </value>
            <value>
                <fullName>Traceability</fullName>
            </value>
            <value>
                <fullName>User Interface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>