force-app/main/default/objects/Defect__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Populated through a trigger with the date when the defect was closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>