force-app/main/default/objects/Defect__c/fields/Component_Detail__c.field-meta.xml
<CustomField>
    <fullName>Component_Detail__c</fullName>
    <description>Type of the Component in which the defect is identified</description>
    <label>Component Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Buttons or Links</fullName>
            </value>
            <value>
                <fullName>Custom Functionality / Code</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
            <value>
                <fullName>List Views</fullName>
            </value>
            <value>
                <fullName>Page Layouts</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Security / Permissions</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>Workflow &amp; Approvals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>