force-app/main/default/objects/Defect__c/fields/Days_left__c.field-meta.xml
<CustomField>
    <fullName>Days_left__c</fullName>
    <formula>if (OR(Current_Status__c =&quot;Developer Assigned&quot;,Current_Status__c=&quot;Fixed&quot;, Current_Status__c =&quot;Fix in Process&quot;),if(Text(Target_Completion_Date__c - TODAY())&lt;&gt;&quot;&quot;,Text(Target_Completion_Date__c - TODAY()) &amp; &quot; Day(s) Left&quot;,&quot;&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Complete</label>
    <type>Text</type>
</CustomField>