force-app/main/default/objects/Defect__c/fields/Defect_Detected__c.field-meta.xml
<CustomField>
    <fullName>Defect_Detected__c</fullName>
    <description>It shows the Phase of the project in which the defect is identified</description>
    <label>Defect Detected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requirement Stage</fullName>
            </value>
            <value>
                <fullName>Design Stage</fullName>
            </value>
            <value>
                <fullName>Design Review</fullName>
            </value>
            <value>
                <fullName>Build Stage</fullName>
            </value>
            <value>
                <fullName>Build Review</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>Test Script Review</fullName>
            </value>
            <value>
                <fullName>Regression Testing</fullName>
            </value>
            <value>
                <fullName>Unit Testing</fullName>
            </value>
            <value>
                <fullName>System Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>