force-app/main/default/objects/Defect__c/fields/Defect_Type__c.field-meta.xml
<CustomField>
    <fullName>Defect_Type__c</fullName>
    <description>This field specifies type of the defect</description>
    <label>Defect Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design Defect</fullName>
            </value>
            <value>
                <fullName>Data Validation</fullName>
            </value>
            <value>
                <fullName>General Support</fullName>
            </value>
            <value>
                <fullName>General Access</fullName>
            </value>
            <value>
                <fullName>Code Review Defect</fullName>
                <label>API Code Defect</label>
            </value>
            <value>
                <fullName>Test Script Review Defect</fullName>
                <label>Test Script Defect</label>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>