force-app/main/default/objects/Defect__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <description>Detailed Description of the defect</description>
    <label>Detailed Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>