force-app/main/default/objects/Defect__c/fields/Detected_In_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Detected_In_Project_Phase__c</fullName>
    <formula>Associated_Test_Result__r.Release__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detected in Project Phase</label>
    <type>Text</type>
</CustomField>