force-app/main/default/objects/Defect__c/fields/Detected_in_Test_Phase__c.field-meta.xml
<CustomField>
    <fullName>Detected_in_Test_Phase__c</fullName>
    <label>Detected in Test Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-SIT</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
                <default>true</default>
                <label>SIT</label>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>