force-app/main/default/objects/Defect__c/fields/Detected_in_Testing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Detected_in_Testing_Stage__c</fullName>
    <formula>TEXT(Associated_Test_Result__r.Testing_Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detected in Testing Stage</label>
    <type>Text</type>
</CustomField>