force-app/main/default/objects/Defect__c/fields/Developer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Developer_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer to whom the defect has been assigned</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Defects1</relationshipName>
    <type>Lookup</type>
</CustomField>