force-app/main/default/objects/Defect__c/fields/Developer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comments__c</fullName>
    <description>Developer&#39;s comments on the defect</description>
    <label>Developer Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>