force-app/main/default/objects/Defect__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Environment where the defect has been identified</description>
    <label>Detected in Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
                <default>true</default>
                <label>SIT</label>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>