force-app/main/default/objects/Defect__c/fields/HPSM_Ticket__c.field-meta.xml
<CustomField>
    <fullName>HPSM_Ticket__c</fullName>
    <description>Corresponding HPSM Ticket #</description>
    <inlineHelpText>What is the HPSM Ticket # that corresponds to this defect?</inlineHelpText>
    <label>HPSM Ticket #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>