force-app/main/default/objects/Defect__c/fields/Logged_by_Training_Team__c.field-meta.xml
<CustomField>
    <fullName>Logged_by_Training_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to denote that a member of the Training Team logged this defect</description>
    <inlineHelpText>Has a member of the Training Team logged this defect?</inlineHelpText>
    <label>Logged by Training Team</label>
    <type>Checkbox</type>
</CustomField>