force-app/main/default/objects/Defect__c/fields/NS_System__c.field-meta.xml
<CustomField>
    <fullName>NS_System__c</fullName>
    <description>This is the system that has the defect.  Helps identify the group that needs to work the defect.</description>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccessNS</fullName>
            </value>
            <value>
                <fullName>ConnectNS</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>SFGateway</fullName>
            </value>
            <value>
                <fullName>TYES</fullName>
            </value>
            <value>
                <fullName>Genesys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>