force-app/main/default/objects/Defect__c/fields/Onshore_Comments__c.field-meta.xml
<CustomField>
    <fullName>Onshore_Comments__c</fullName>
    <label>Onshore Comments</label>
    <type>TextArea</type>
</CustomField>