force-app/main/default/objects/Defect__c/fields/Page_Tested__c.field-meta.xml
<CustomField>
    <fullName>Page_Tested__c</fullName>
    <label>Page Tested</label>
    <type>Url</type>
</CustomField>