force-app/main/default/objects/Defect__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority of the defect</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
                <default>true</default>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
            <value>
                <fullName>5 - Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>