force-app/main/default/objects/Defect__c/fields/Related_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Request related to the defect</description>
    <label>Related Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>