force-app/main/default/objects/Defect__c/fields/Resolution_Components__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Components__c</fullName>
    <description>Resolution &amp; Components created for Developer&#39;s comments with exact component name and changes.</description>
    <inlineHelpText>Provide component name and details of changes</inlineHelpText>
    <label>Resolution &amp; Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>