force-app/main/default/objects/Defect__c/fields/Retest_Status__c.field-meta.xml
<CustomField>
    <fullName>Retest_Status__c</fullName>
    <description>Status of retest of the defect</description>
    <label>Retest Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>