force-app/main/default/objects/Defect__c/fields/Retested_By__c.field-meta.xml
<CustomField>
    <fullName>Retested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who retested the defect</description>
    <label>Retested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Defects2</relationshipName>
    <type>Lookup</type>
</CustomField>