force-app/main/default/objects/Defect__c/fields/Retesting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Retesting_Comments__c</fullName>
    <description>Comments on retesting of the defect</description>
    <label>Retesting Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>