force-app/main/default/objects/Defect__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the defect</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open - Developer Assigned</fullName>
            </value>
            <value>
                <fullName>Open - Fix in Process</fullName>
            </value>
            <value>
                <fullName>Open - Assigned to BA</fullName>
                <label>Open - Assigned to Business Analyst</label>
            </value>
            <value>
                <fullName>Open - ON HOLD - Need to update FDD</fullName>
            </value>
            <value>
                <fullName>Open - Salesforce.com Request Submitted</fullName>
            </value>
            <value>
                <fullName>Open - Business Input Needed</fullName>
            </value>
            <value>
                <fullName>Open - Possible Enhancement</fullName>
            </value>
            <value>
                <fullName>Fixed - Update FDD/Requirement</fullName>
                <label>Fixed - Update FDD/Requirement before Closing</label>
            </value>
            <value>
                <fullName>Fixed -  Awaiting Deployment</fullName>
            </value>
            <value>
                <fullName>Fixed - Ready for Retest</fullName>
            </value>
            <value>
                <fullName>Fixed - Onshore to Verify</fullName>
            </value>
            <value>
                <fullName>Fixed - Awaiting Deployment to UAT</fullName>
            </value>
            <value>
                <fullName>Fixed - UAT</fullName>
                <label>Ready for Retest - UAT</label>
            </value>
            <value>
                <fullName>Passed - Awaiting Deployment to Prod</fullName>
            </value>
            <value>
                <fullName>Rejected - Can Not Reproduce</fullName>
            </value>
            <value>
                <fullName>Rejected - Expected Behavior</fullName>
            </value>
            <value>
                <fullName>Rejected - Training Issue</fullName>
            </value>
            <value>
                <fullName>Rejected - Duplicate</fullName>
            </value>
            <value>
                <fullName>Deferred - Future Enhancement Consideration</fullName>
            </value>
            <value>
                <fullName>Closed - Test Result Passed</fullName>
            </value>
            <value>
                <fullName>Closed - In Production</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>