force-app/main/default/objects/Defect__c/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <description>Used to hold the date when the defect is expected to be fixed</description>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>