force-app/main/default/objects/Defect__c/fields/Test_Phase__c.field-meta.xml
<CustomField>
    <fullName>Test_Phase__c</fullName>
    <description>In which phase of testing the defect was identified</description>
    <label>Test Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>System Test</fullName>
            </value>
            <value>
                <fullName>Migration Test</fullName>
            </value>
            <value>
                <fullName>Regression Test</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Client Team QA</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
                <default>true</default>
                <label>SIT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>