force-app/main/default/objects/Defect__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <label>Test Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>