force-app/main/default/objects/Defect__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Test Script</description>
    <label>Test Script</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>