force-app/main/default/objects/Defect__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who identified the failed step</description>
    <inlineHelpText>Who is the Tester who identified the failed step?</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>