force-app/main/default/objects/Defect__c/fields/Testing_Type__c.field-meta.xml
<CustomField>
    <fullName>Testing_Type__c</fullName>
    <description>In which type of testing the defect was identified</description>
    <label>Testing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regression Test</fullName>
            </value>
            <value>
                <fullName>System Test</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>