force-app/main/default/objects/Defect__c/fields/Times_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Times_Reopened__c</fullName>
    <description>Used to Store the number of time the defect has been reopened</description>
    <label>#of Times Reopened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>