force-app/main/default/objects/Defect__c/fields/UAT_Critical__c.field-meta.xml
<CustomField>
    <fullName>UAT_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to denote that a defect is  required to be resolved before UAT can begin.</description>
    <inlineHelpText>Is this defect critical to begin UAT?</inlineHelpText>
    <label>UAT Critical</label>
    <type>Checkbox</type>
</CustomField>