force-app/main/default/objects/Defect__c/recordTypes/Defect.recordType-meta.xml
<RecordType>
    <fullName>Defect</fullName>
    <active>true</active>
    <label>Defect</label>
</RecordType>