force-app/main/default/objects/Defect__c/recordTypes/Enhancement_Request.recordType-meta.xml
<RecordType>
    <fullName>Enhancement_Request</fullName>
    <active>true</active>
    <label>Enhancement Request</label>
</RecordType>