force-app/main/default/objects/Defect__c/recordTypes/Production_Defect.recordType-meta.xml
<RecordType>
    <fullName>Production_Defect</fullName>
    <active>true</active>
    <description>This record type is for defects logged after Go-Live</description>
    <label>Production Defect</label>
</RecordType>